--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
 <footer>
     <nav>
-        <ul>
+        <ol>
+            <li><a href="tienda.html">Tienda</a></li>
             <li><a href="contacto.html">Contacto</a></li>
-        </ul>
+        </ol>
     </nav>
 </footer>
 </html>
