--- a/contacto.html
+++ b/contacto.html
@@ -33,9 +33,10 @@
 
 <footer>
     <nav>
-        <ul>
-            <li><a href="index.html">Volver</a></li>
-        </ul>
+        <ol>
+            <li><a href="index.html">Tienda</a></li>
+            <li><a href="index.html">Inicio</a></li>
+        </ol>
     </nav>
 </footer>
 </html>
