--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
         <input type="email" id="email" name="email"><br>
 
         <label> Fecha de Nacimiento:</label>
-        <input type="date" name="fechanacimiento" value="fechanacimiento" /><br/>
+        <input type="date" name="fechanacimiento" value="fechanacimiento" /><br>
 
         <button class="button-4" type="submit">Enviar</button>
     </form>
@@ -34,7 +34,7 @@
 <footer>
     <nav>
         <ol>
-            <li><a href="index.html">Tienda</a></li>
+            <li><a href="tienda.html">Tienda</a></li>
             <li><a href="index.html">Inicio</a></li>
         </ol>
     </nav>
