--- a/tienda.html
+++ b/tienda.html
@@ -30,7 +30,7 @@
 <footer>
     <nav>
         <ol>
-            <li><a href="index.html">Contacto</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
             <li><a href="index.html">Inicio</a></li>
         </ol>
     </nav>
